--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="register_btn_txt">Register</string>
     <string name="enter_your_email_et">Enter Your Email</string>
     <string name="enter_password_et">Enter Password</string>
+    <string name="enter_your_name_register_et">Enter Your Name</string>
+    <string name="enter_your_name_et">Enter Your Name</string>
+    <string name="signup_with_google_tv">SignUp with Google</string>
+    <string name="register_with_google_tv">Register with Google?</string>
+    <string name="or_tv">Or</string>
+    <string name="register_with_google_btn">Register with Google</string>
 </resources>
