--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="register_with_google_tv">Register with Google?</string>
     <string name="or_tv">Or</string>
     <string name="register_with_google_btn">Register with Google</string>
+    <string name="new_feeds_tv">New feeds</string>
+    <string name="save_article_btn">save_article_btn</string>
+    <string name="search_view_hint_text">Search</string>
 </resources>
