--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
@@ -23,5 +23,9 @@
     <string name="search_view_hint_text">Search</string>
     <string name="blog_heading_txt">Please Start Writing Better Git Commits</string>
     <string name="blog_user_profile_image">Blog User Profile Image</string>
-    <string name="blogger_name_tv">New\nBlogger</string>
+    <string name="blogger_name_tv">Sarmad\nBlogger</string>
+    <string name="date_tv">Jul 29, 2022</string>
+    <string name="blog_column_tv">I recently read a helpful article on Hashnode by Simon Egersand titled Write Git Commit Messages Your Colleagues Will Love, and it inspired me to dive a little deeper into understanding what makes a Git commit good or bad.</string>
+    <string name="blog_post_btn_readmore">Read more</string>
+    <string name="like_counts_tv">200</string>
 </resources>
