Add float action button and fix issues

--- a/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="blog_column_tv">I recently read a helpful article on Hashnode by Simon Egersand titled Write Git Commit Messages Your Colleagues Will Love, and it inspired me to dive a little deeper into understanding what makes a Git commit good or bad.</string>
     <string name="blog_post_btn_readmore">Read more</string>
     <string name="like_counts_tv">200</string>
+    <string name="add_blog_float_btn">add_blog_float_btn</string>
 </resources>
